--- a/.github/workflows/main_planreview.yml
+++ b/.github/workflows/main_planreview.yml
@@ -29,10 +29,13 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y tesseract-ocr tesseract-ocr-eng
           sudo apt-get install -y poppler-utils
+          sudo apt-get install -y libpoppler-cpp-dev libpoppler-dev
           sudo apt-get install -y libgl1-mesa-glx libglib2.0-0
           sudo apt-get install -y libsm6 libxext6 libxrender-dev
           sudo apt-get install -y libgomp1
+          sudo apt-get install -y pkg-config
           tesseract --version
+          pkg-config --modversion poppler-cpp
 
       - name: Create and start virtual environment
         run: |
