--- a/.github/workflows/main_planreview.yml
+++ b/.github/workflows/main_planreview.yml
@@ -30,7 +30,7 @@ jobs:
           sudo apt-get install -y tesseract-ocr tesseract-ocr-eng
           sudo apt-get install -y poppler-utils
           sudo apt-get install -y libpoppler-cpp-dev libpoppler-dev
-          sudo apt-get install -y libgl1-mesa-glx libglib2.0-0
+          sudo apt-get install -y libgl1-mesa-dev libglib2.0-0
           sudo apt-get install -y libsm6 libxext6 libxrender-dev
           sudo apt-get install -y libgomp1
           sudo apt-get install -y pkg-config
