--- a/requirements.txt
+++ b/requirements.txt
@@ -23,8 +23,10 @@ psycopg2==2.9.10
 psycopg2-binary==2.9.10
 pydantic==2.11.7
 pydantic_core==2.33.2
+PyMuPDF==1.26.3
 pytesseract==0.3.13
 python-dotenv==1.1.1
+python-poppler==0.4.1
 sniffio==1.3.1
 tqdm==4.67.1
 typing-inspection==0.4.1
